--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.system</groupId>
-    <artifactId>ShreejanEcommerce</artifactId>
+    <artifactId>KrishalEcommerce</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ShreejanEcommerce</name>
     <description>ShreejanEcommerce</description>
